--- a/alberto/headeralberto.html
+++ b/alberto/headeralberto.html
@@ -5,7 +5,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edlyn's Crafts - Shop</title>
     <style>
-  
+              body {
+            font-family: sans-serif;
+            margin: 20px;
+            text-align: center;
+        }
+        .header-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 0;
+            border-bottom: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        .header-bar img {
+            width: 30px; 
+            height: 30px;
+            margin-right: 10px;
+        }
+        .header-bar span {
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        .nav-links a {
+            margin-left: 20px;
+            text-decoration: none;
+            color: #333;
+        }
+        .nav-links a:hover {
+            color: #007bff;
+        }
+        .content {
+            margin-top: 50px;
+        }
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .product-item {
+            border: 1px solid #eee;
+            padding: 15px;
+            text-align: left;
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+        }
+        .product-item img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        .product-item h3 {
+            margin-top: 0;
+            font-size: 1.1em;
+        }
+        .product-item p {
+            font-size: 0.9em;
+            color: #666;
+        }
+
+        .features {
+            background-color: #719a89;
+            color: white;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px 10px;
+            text-align: center;
+        }
+
+        .features div {
+            flex: 1 1 200px;
+            margin: 10px;
+            padding: 5px; 
+        }
+
+        .features strong {
+            display: block; 
+            margin-bottom: 3px; 
+        }
+
+        .features span.description { 
+            font-size: 0.9em; 
+            opacity: 0.9; 
+        }
+
+        .footer {
+            background-color: #f4f4f4;
+            padding: 30px 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        .footer-section {
+            flex: 1 1 200px;
+            margin: 10px;
+        }
+
+        .footer h3 {
+            margin-top: 0;
+            margin-bottom: 10px; 
+        }
+
+        .footer-section a {
+            color: #000;
+            text-decoration: none;
+             margin-left: 20px; 
+            display: block; 
+            margin: 5px 0; 
+        }
+
+        .footer-section a:hover {
+            color: #007bff;
+        }
+
+        .footer-section p { 
+            margin: 5px 0; 
+            line-height: 1.4; 
+        }
+
+
+        .copyright {
+            text-align: center;
+            font-size: 14px;
+            padding: 10px;
+            background: #eee;
+        }
+
+        @media (max-width: 600px) {
+            .features, .footer {
+                flex-direction: column;
+                align-items: center;
+            }
+            .footer-section {
+                text-align: center; 
+            }
+            .footer-section a {
+                display: inline-block; 
+                margin: 5px 10px; 
+            }
+        }
     </style>
 </head>
 <body>
